# crispy-doom

./: .git-blame-ignore-revs  .gitignore  .travis.sh  CMakeLists.txt  run_tests.sh
.github/workflows/: unit_tests.yml
src/: CMakeLists.txt  doomtype.h
src/doom/: .clang-format  CMakeLists.txt  g_game.c  p_extsaveg.c  p_extsaveg.h  p_saveg.c  p_saveg.h
src/doom/savegame/: CMakeLists.txt  extra_savegame.cpp  on_exit.hpp  open_mode.hpp  overload.hpp  readable_save_file.hpp  save_file.cpp  save_file.hpp  savegame.cpp  savegame.hpp  savegame_context.hpp  savegame_interface.cpp  writable_save_file.hpp
src/doom/tests/: CMakeLists.txt  file_stream.hpp  file_utils_test.cpp  savegame_test.cpp  savegame_test_16_bit.cpp  savegame_test_32_bit.cpp  savegame_test_8bit.cpp
tests/reference_data/: E1m4wik4.dsg  E1m4wik4.lmp
